<resources>
    <string name="app_name">Service Book</string>
    <string name="txt_cari_pelanggan">Cari Pelanggan</string>
    <string name="txt_semua_status">Semua Status</string>
    <string name="txt_semua_produk">Semua Produk</string>
    <string name="txt_list_pekerjaan">List Pekerjaan</string>
    <string name="txt_service_book">Service Book</string>
    <string name="txt_tugas_baru">Tugas Baru</string>
    <string name="txt_nama_pelanggan">Nama Pelanggan</string>
    <string name="txt_nomor_hp">Nomor HP</string>
    <string name="txt_jenis_barang">Jenis Barang</string>
    <string name="txt_deskripsi_keluhan">Deskripsi Keluhan</string>
    <string name="txt_simpan">Simpan</string>
    <string name="txt_batal">Batal</string>
    <string name="txt_detail_pekerjaan">Detail Pekerjaan</string>
    <string name="txt_status">Status</string>
</resources>