<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_tugas_baru"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/mainColor"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_tambah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_tugas_baru"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_kembali"
            app:layout_constraintTop_toTopOf="@id/iv_kembali"
            app:layout_constraintBottom_toBottomOf="@id/iv_kembali"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_form_tugas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top_tugas_baru">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nama_pelanggan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_nama_pelanggan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nama_pelanggan"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txt_nama_pelanggan"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_nama_pelanggan"
            app:layout_constraintTop_toBottomOf="@id/tv_nama_pelanggan" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_nomor_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_nomor_hp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nama_pelanggan" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_nomor_hp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/txt_nomor_hp"
            android:imeOptions="actionGo"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_nomor_hp"
            app:layout_constraintTop_toBottomOf="@id/tv_nomor_hp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_kategori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_jenis_barang"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_nomor_hp" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_jenis_barang"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_edit_text"
            android:paddingHorizontal="8dp"
            android:textAlignment="textStart"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_kategori" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/txt_deskripsi_keluhan"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_jenis_barang" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_text"
            android:ellipsize="none"
            android:gravity="top|start"
            android:hint="@string/txt_deskripsi_keluhan"
            android:inputType="textMultiLine"
            android:lines="4"
            android:overScrollMode="always"
            android:padding="8dp"
            android:paddingHorizontal="8dp"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_nomor_hp"
            app:layout_constraintTop_toBottomOf="@id/tv_deskripsi" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_button_rect"
        android:text="@string/txt_simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>