<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_top_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/back_arrow"
            android:layout_margin="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_detail_pekerjaan"
            android:textColor="@color/white"
            android:layout_marginStart="12dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/iv_kembali"
            app:layout_constraintTop_toTopOf="@id/iv_kembali"
            app:layout_constraintBottom_toBottomOf="@id/iv_kembali"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/sv_content_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/btn_simpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_top_detail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_nama_pelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_nama_pelanggan"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nama_pelanggan"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/txt_nama_pelanggan"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/lbl_nama_pelanggan"
                app:layout_constraintTop_toBottomOf="@id/lbl_nama_pelanggan" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_nomor_hp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_nomor_hp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_nama_pelanggan" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nomor_hp"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/txt_nomor_hp"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:paddingHorizontal="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/lbl_nomor_hp"
                app:layout_constraintTop_toBottomOf="@id/lbl_nomor_hp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_jenis_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_jenis_barang"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_nomor_hp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_jenis_barang"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:paddingHorizontal="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_jenis_barang" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_status"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_jenis_barang" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/bg_edit_text"
                android:paddingHorizontal="8dp"
                android:textAlignment="textStart"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_status" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/lbl_deskripsi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/txt_deskripsi_keluhan"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_status" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_deskripsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_edit_text"
                android:ellipsize="none"
                android:gravity="top|start"
                android:hint="@string/txt_deskripsi_keluhan"
                android:inputType="textMultiLine"
                android:lines="4"
                android:overScrollMode="always"
                android:padding="8dp"
                android:paddingHorizontal="8dp"
                android:scrollbars="vertical"
                android:scrollHorizontally="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/lbl_nomor_hp"
                app:layout_constraintTop_toBottomOf="@id/lbl_deskripsi" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bg_button_rect"
        android:text="@string/txt_simpan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>